--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorRed">#f92e2e</color>
     <color name="colorGreen">#30f929</color>
-    <color name="colorGrey">#737472</color>
+    <color name="colorGrey">#d1d6cd</color>
     <color name="colorBack">#fde7bc</color>
     <color name="colorBrown">#431c00</color>
+    <color name="colorYellow">#e6ff00</color>
     <color name="colorLightBrown">#bf5000</color>
+    <color name="colorHighlight">#565656</color>
     <color name="colorTransparent">#00000000</color>
 </resources>
