--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -45,15 +45,6 @@
                     android:contentDescription="QuestionImage"
                     app:srcCompat="@mipmap/ic_launcher" />
 
-                <Button
-                    android:id="@+id/hint"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="Подсказка"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -116,15 +107,10 @@
                     android:id="@+id/buttonCheck1"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-                <CheckBox
-                    android:id="@+id/checkBox1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,15 +120,10 @@
                     android:id="@+id/buttonCheck2"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-                <CheckBox
-                    android:id="@+id/checkBox2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,15 +133,10 @@
                     android:id="@+id/buttonCheck3"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-                <CheckBox
-                    android:id="@+id/checkBox3"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -170,15 +146,10 @@
                     android:id="@+id/buttonCheck4"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-                <CheckBox
-                    android:id="@+id/checkBox4"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
             </LinearLayout>
             <Button
                 android:id="@+id/buttonType2Go"
@@ -211,6 +182,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Нет"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        </LinearLayout>
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            android:id="@+id/hintlayout">
+
+            <Button
+                android:id="@+id/hint"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="Подсказка"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
     </LinearLayout>
