--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -67,6 +67,7 @@
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
                 android:text="Button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             <Button
@@ -74,6 +75,7 @@
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
                 android:text="Button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             <Button
@@ -81,6 +83,7 @@
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
                 android:text="Button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
@@ -109,6 +112,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </LinearLayout>
@@ -122,6 +126,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </LinearLayout>
@@ -135,6 +140,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </LinearLayout>
@@ -148,6 +154,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </LinearLayout>
@@ -166,6 +173,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="3dp"
             android:padding="8dp"
             android:id="@+id/type3">
             <Button
@@ -181,6 +189,7 @@
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
                 android:text="Нет"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
