--- a/app/src/main/res/layout/activity_multi_tasks_list.xml
+++ b/app/src/main/res/layout/activity_multi_tasks_list.xml
@@ -16,12 +16,13 @@
             android:id="@+id/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:textSize="18dp"
+            android:layout_marginLeft="8sp"
+            android:textSize="14sp"
             android:text="Выберите темы:"/>
         <EditText android:id="@+id/userFilter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8sp"
             android:hint="Поиск" />
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
