--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorLightBrown</item>
         <item name="android:colorBackground">@color/colorBack</item>
+        <item name="android:text">@color/colorBlack</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
