--- a/app/src/main/res/layout/activity_tren.xml
+++ b/app/src/main/res/layout/activity_tren.xml
@@ -15,6 +15,7 @@
             android:id="@+id/textTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorBlack"
             android:text="Название темы" />
     </LinearLayout>
     <LinearLayout
@@ -32,6 +33,7 @@
             android:height="60dp"
             android:padding="6dp"
             android:gravity="center"
+            android:textColor="@color/colorBlack"
             android:drawableLeft="@mipmap/ic_tren"
             android:text="Тренинг" />
 
@@ -51,6 +53,7 @@
             android:height="60dp"
             android:padding="6dp"
             android:gravity="center"
+            android:textColor="@color/colorBlack"
             android:drawableLeft="@mipmap/ic_truefalse"
             android:text="Верю-неверю" />
 
@@ -70,6 +73,7 @@
             android:height="60dp"
             android:padding="6dp"
             android:gravity="center"
+            android:textColor="@color/colorBlack"
             android:drawableLeft="@mipmap/ic_control"
             android:text="Контроль" />
 
