--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/colorBlack"
             tools:text="Тема" />
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -35,6 +36,7 @@
                     android:layout_marginTop="10dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="italic"
+                    android:textColor="@color/colorBlack"
                     tools:text="Текст вопроса" />
 
                 <ImageView
@@ -60,6 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/colorBlack"
                 android:text="Button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             <Button
@@ -68,6 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:textColor="@color/colorBlack"
                 android:text="Button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             <Button
@@ -76,6 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:textColor="@color/colorBlack"
                 android:text="Button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             <Button
@@ -84,6 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:textColor="@color/colorBlack"
                 android:text="Button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
@@ -101,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/colorBlack"
                 tools:text="Выберите правильные ответы:" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -113,6 +120,7 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
+                    android:textColor="@color/colorBlack"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </LinearLayout>
@@ -127,6 +135,7 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
+                    android:textColor="@color/colorBlack"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </LinearLayout>
@@ -141,6 +150,7 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
+                    android:textColor="@color/colorBlack"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </LinearLayout>
@@ -155,6 +165,7 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
+                    android:textColor="@color/colorBlack"
                     android:text="Button"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </LinearLayout>
@@ -164,6 +175,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorBlack"
                 android:text="Ответить"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
@@ -182,6 +194,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/colorBlack"
                 android:text="Да"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             <Button
@@ -190,6 +203,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:textColor="@color/colorBlack"
                 android:text="Нет"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
@@ -210,6 +224,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:textColor="@color/colorBlack"
                 android:text="Подсказка"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
@@ -229,12 +244,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/colorBlack"
                 tools:text="Текст" />
             <TextView
                 android:id="@+id/textres2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/colorBlack"
                 tools:text="Текст" />
 
         </LinearLayout>
