--- a/app/src/main/res/layout/list_item_checkbox.xml
+++ b/app/src/main/res/layout/list_item_checkbox.xml
@@ -16,6 +16,7 @@
 
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
+    android:textColor="@color/colorBlack"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
